<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dandelion</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="weibosdk_attention">注意</string>
    <string name="weibosdk_delete_all">是否要删除这条微博？</string>
    <string name="weibosdk_ok">是</string>
    <string name="weibosdk_cancel">否</string>
    <string name="weibosdk_app_name">com_weibo_android</string>
    <string name="weibosdk_send">发送</string>
    <string name="weibosdk_photo">拍照</string>
    <string name="weibosdk_close">关闭</string>
    <string name="weibosdk_share_dialog_title">新浪微博</string>
    <string name="weibosdk_please_login">请登录！</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_send_failed">分享失败！</string>
    <string name="weibosdk_del_pic">是否删除图片？</string>
    <string name="weibosdk_comment">评论</string>
    <string name="weibosdk_forward">转发</string>
    <string name="weibosdk_fav">收藏</string>
    <string name="testcontent"></string>
    <string name="edit_message">edit</string>
    <string name="button_send">post</string>
    <string name="button_share">share</string>
    <string name="button_getFriendList">getFriend</string>
    <string name="button_getUserId">getUserId</string>
    <string name="edit_auto_complete_message">type here to @ your friend</string>
    <string name="button_add_at">add</string>
    <string name="edit_movie_name">type movie name</string>
    <string name="button_getMovie">Movie</string>
    <string name="title_activity_film_show">Film</string>
    <string name="dummy_button">Post</string>
    <string name="dummy_content">Movie\nDating</string>
    <string name="title_activity_movie">Movie</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_share_movie">ShareMovieActivity</string>
    <string name="sliding_button1">home</string>
    <string name="sliding_button2">setting</string>
    <string name="sliding_button3">feedback</string>
    <string name="sliding_button_quit">quit</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_slidingmenu">SlidingmenuActivity</string>
    <string name="changing_fragments">Dandelion</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="friends">Friends</string>
    <string name="hint_search">Search</string>
    <string name="button_tag">#</string>
    <string name="button_at">"@"</string>
    <string name="button_post">Post</string>
    <string name="app_id">600638156661082</string>
    <string name="setting_account_binding_douban">douban</string>
    <string name="setting_account_binding_weibo">weibo</string>
    <string name="setting_account_binding_facebook">facebook</string>
    <string name="setting_account_binding_yes">bind</string>
    <string name="setting_account_binding_no">unbind</string>
    <string name="title_activity_setting_account_binding">SocialAccount</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_loading">Loading...</string>

</resources>